tests/neg/i7359.scala
trait SAMTrait where
  def first(): String
  def notify(): Unit // error
